--- a/Final-project-IBM.ipynb
+++ b/Final-project-IBM.ipynb
@@ -1684,7 +1684,7 @@
    ],
    "source": [
     "x_norm = preprocessing.StandardScaler().fit(x).transform(x.astype(float))\n",
-    "x_norm\n"
+    "x_norm"
    ]
   },
   {
